--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
+    "@tailwindcss/postcss": "^4.0.7",
     "axios": "^1.7.9",
     "cloudinary": "^2.5.1",
     "inngest": "^3.31.8",
